// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogCard renders full blog card 1`] = `
<section
  className="jsx-3182958052"
>
  <a
    aria-label="My First Blog Post"
    className="jsx-3354872520"
    href="/blog/my-first-blog"
  >
    <article
      className="jsx-3182958052"
    >
      <div
        className="jsx-3182958052 blog-card-image"
      >
        <span
          className="lazy-img"
          style={
            Object {
              "display": "inline-block",
              "height": 0,
              "width": 0,
            }
          }
        />
      </div>
      <div
        className="jsx-3182958052 blog-card-content"
      >
        <h1
          className="jsx-3182958052"
        >
          My First Blog Post
        </h1>
        <div
          className="jsx-105857479 card-meta"
        >
          <div
            className="jsx-105857479 authors"
          >
            <span
              className="jsx-105857479"
            >
              by
            </span>
            <span
              className="jsx-105857479 author"
            >
              Sir Blog
            </span>
          </div>
          <div
            className="jsx-105857479 publish-data"
          >
            <span
              className="jsx-105857479 publish-date"
            >
              August 07, 2019
            </span>
            12 minutes
          </div>
        </div>
        <p
          className="jsx-4116127750"
        >
          Some text for the description that explains this blog post
        </p>
      </div>
    </article>
  </a>
</section>
`;

exports[`BlogCard renders full blog card with vse query string in link for preview 1`] = `
<section
  className="jsx-4116127750"
>
  <a
    aria-label="My First Blog Post"
    className="jsx-3354872520"
    href="/preview?vse=test-vse.domain&content=8d6943c7-6028-4fac-b45e-57fc63bd032a"
  >
    <article
      className="jsx-4116127750"
    >
      <div
        className="jsx-4116127750 blog-card-image"
      >
        <span
          className="lazy-img"
          style={
            Object {
              "display": "inline-block",
              "height": 0,
              "width": 0,
            }
          }
        />
      </div>
      <div
        className="jsx-4116127750 blog-card-content"
      >
        <h1
          className="jsx-4116127750"
        >
          My First Blog Post
        </h1>
        <div
          className="jsx-105857479 card-meta"
        >
          <div
            className="jsx-105857479 authors"
          >
            <span
              className="jsx-105857479"
            >
              by
            </span>
            <span
              className="jsx-105857479 author"
            >
              Sir Blog
            </span>
          </div>
          <div
            className="jsx-105857479 publish-data"
          >
            <span
              className="jsx-105857479 publish-date"
            >
              August 07, 2019
            </span>
            12 minutes
          </div>
        </div>
        <p
          className="jsx-3182958052"
        >
          Some text for the description that explains this blog post
        </p>
      </div>
    </article>
  </a>
</section>
`;
